--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 
+html {
+
+        background: url(../images/DarkTire.png);
+    
+}
+
 header {
 	background-color: #ffffff;
 	border-bottom: 2px solid #cccccc;
@@ -31,22 +37,17 @@ a {
 
 }
 
-}
-
 #container {
 	width: 960px;
-	
 	background-image: url("DarkTire.png");
 }
-
 
 #about_me {
 	width: 650px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	background-color: #ffffff;
-	float:left;
-	border-width: 10px;
-	border-color: #dddddd;
+	
+	border: solid #dddddd; 
 	width: ;
 	
 }
@@ -62,16 +63,12 @@ h1 {
 	float: left;
 }
 
-}
-
-#ConnectWithMe {
+#sidebar {
 	width: 270px;
 	background-color: #ffffff;
-	float: left;
+	
 	width: ;
-	border-width: 2px;
-	border-color: #dddddd;
-
+	border: 2px solid #dddddd; 
 }
 
 h3 {
@@ -89,8 +86,7 @@ footer {
 	height: 80px;
 	font-size: 11px;
 	text-align: center;
-	float: 
+	position: ;
 }
-
 
 
