--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,70 +5,108 @@ html {
     
 }
 
+body {
+	margin: 0;
+	padding: 0;
+}
+
 header {
+	height: 100px;
+	width: 100%;
 	background-color: #ffffff;
 	border-bottom: 2px solid #cccccc;
 	text-align: center;
+	margin-bottom: 20px;
 	
 }
 
-a {
-	text-align: center;
-	text-decoration: none;
-	padding-left: 10px;
-	padding-right: 10px;
+#nav {
+	display: block;
 	float: right;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+   	text-decoration: none;
+    width: fit-content;
+    text-align: center;
 }
+
+a{ 
+text-decoration: none; }
+
+#entire-content {
+	width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 
 #my_name {
-	font-family: 'Georgia', Times, Times New Roman, serif;
 	background-color: #4aaaa5;
 	color: #ffffff;
-	text-align: center;
-	font-size: 25px;
-	width: 300px;
-	height: 50px;
+	position: relative;
+    left: 0;
+    bottom: 0;
+    width: fit-content;
+    float: left;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding: 25px;	
 
 }
 
-#links {
-	text-align: center;
 
+h2 {
+	display: block;
+	font-size: 2em
+	font-weight: bold;
 }
 
 #container {
-	width: 960px;
 	background-image: url("DarkTire.png");
 }
 
 #about_me {
-	width: 650px;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	width: 600px;
 	background-color: #ffffff;
-	
-	border: solid #dddddd; 
-	width: ;
-	
+	float: left;
+	display: block;
 }
 
 h1 {
-	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+    color: #4aaaa5;
+    display: block;
+    font-weight: bold;
+}
+
+.line {
+	width: 100%;
+    height: 2px;
+    background: #dddddd;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #image {
 	width: 200px;
 	height: 200px;
-	margin-right: 20px;
 	float: left;
 }
 
+p {
+	display: block;
+}
+
 #sidebar {
-	width: 270px;
-	background-color: #ffffff;
-	
-	width: ;
-	border: 2px solid #dddddd; 
+	float: left;
+    width: 220px;
+    text-align: center;
+}
+
+#about_me, #sidebar {
+	background-color: white;
+    border: solid #dddddd;
+    
+    padding: 25px;
 }
 
 h3 {
@@ -83,10 +121,16 @@ h3 {
 footer {
 	background-color: #666666;
 	color: #ffffff;
-	height: 80px;
+	left: 0;
+	bottom: 0;
+	height: 60px;
+	width: 100%;
 	font-size: 11px;
 	text-align: center;
 	position: ;
-}
+	clear: left;
+	border-top: 10px solid #4aaaa5;
+	display: block;
+}	
 
 
