--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,136 +1,160 @@
-
 html {
-
-        background: url(../images/DarkTire.png);
-    
-}
-
-body {
-	margin: 0;
-	padding: 0;
-}
-
-header {
-	height: 100px;
-	width: 100%;
-	background-color: #ffffff;
-	border-bottom: 2px solid #cccccc;
-	text-align: center;
-	margin-bottom: 20px;
-	
-}
-
-#nav {
-	display: block;
-	float: right;
-   	text-decoration: none;
-    width: fit-content;
-    text-align: center;
-}
-
-a{ 
-text-decoration: none; }
-
-#entire-content {
-	width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-
-#my_name {
-	background-color: #4aaaa5;
-	color: #ffffff;
-	position: relative;
-    left: 0;
-    bottom: 0;
-    width: fit-content;
-    float: left;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding: 25px;	
-
-}
-
-
-h2 {
-	display: block;
-	font-size: 2em
-	font-weight: bold;
+	background: url(../images/DarkTire.png);
 }
 
 #container {
-	background-image: url("DarkTire.png");
+	width: 960px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
-#about_me {
-	width: 600px;
+header {
+	height: 80px;
+	width: 100%;
 	background-color: #ffffff;
-	float: left;
-	display: block;
+	margin: 0;
+	padding: 0;
+	
 }
 
-h1 {
+#name{
+	background-color: #4aaaa5;
+	width: 300px;
+	height: 80px;
+	margin-left: 200px;
+
+
+}
+
+#mario {
+	display: block;
+	padding: 28px 28px 40px 40px;
+	color: white;
+	font-size: 30px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+nav {
+	float: right;
+	width: fit-cotent;
+	margin: -50px 150px 0px 0px;
+	padding: 0;
+	overflow: hidden;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	
+}
+
+li {
+	display: inline;
+	border-right: 1px solid ;
+	float:left;
+	
+
+}
+
+li a {
+	display: block;
+	text-align: center;
+	padding: 0px 16px;
+    text-decoration: none;
+    font-size: 14px;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+}
+
+
+#main-content {
+	background-color: #ffffff;
+	margin-top: 30px;
+	float: left;
+	width: 650px;
+	height: 400px;
+	margin-bottom: 70px;
+	border: 2px solid #ffffff;
+}
+
+h2 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
     color: #4aaaa5;
     display: block;
     font-weight: bold;
+    padding-left: 30px;
 }
 
-.line {
-	width: 100%;
+.line1 {
+	width: 560px;
     height: 2px;
     background: #dddddd;
     margin-top: 10px;
     margin-bottom: 10px;
+    display: block;
+    margin-left: 30px;
+    margin-bottom: 20px;
 }
 
-#image {
-	width: 200px;
-	height: 200px;
+#image1 {
 	float: left;
+	padding: 0px 15px;
 }
 
 p {
-	display: block;
-}
-
-#sidebar {
-	float: left;
-    width: 220px;
-    text-align: center;
-}
-
-#about_me, #sidebar {
-	background-color: white;
-    border: solid #dddddd;
-    
-    padding: 25px;
+	padding: 0px 10px;
+	color: #777777;
+	line-height: 25px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 h3 {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #4aaaa5;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+aside {
+	width: 270px;
+	float: right;
+	background-color: #ffffff;
+	margin-top: 30px;
+	margin-left: 25px;
+	text-align: center;
+	border: 2px solid #ffffff;
+}
+
+.line2 {
+	width: 180px;
+    height: 2px;
+    display: block;
+    background: #dddddd;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    mar
 }
 
 .logo {
-	width: 60px;
+	width: 55px;
+	margin-bottom: 10px;
 }
 
+
 footer {
-	background-color: #666666;
-	color: #ffffff;
-	left: 0;
-	bottom: 0;
-	height: 60px;
 	width: 100%;
-	font-size: 11px;
-	text-align: center;
+	clear: both;
+	background-color: #666666;
+	height: 60px;
 	position: ;
-	clear: left;
-	border-top: 10px solid #4aaaa5;
-	display: block;
-}	
+	text-align: center;
+	padding: 32px 0px 0px 0px;
+	border-top: 5px solid #4aaaa5;
 
+}
 
+small {
+	color: white;
+}
